syntax = "proto3";

option java_multiple_files = false;
option java_package = "cn.lhfei.grpc.search";
option java_outer_classname = "SearchProto";
option objc_class_prefix = "HLW";

message Result {
  string url = 1;
  string title = 2;
  repeated string snippets = 3;
}

message RequestParam {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
  enum Corpus {
    UNIVERSAL = 0;
    WEB = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 6;
  }
  Corpus corpus = 4;
}

message SearchRequest {
  RequestParam param = 1;
}

message SearchResponse {
  repeated Result results = 1;
}

service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse);
}